<resources>
    <string name="app_name">Droid Jet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="your_score">Score</string>
    <string name="score_val">score_val</string>
    <string name="restart">Restart</string>
    <string name="game_over">GAME OVER</string>
    <string name="game_over_emoji">😖</string>
    <string name="high_score">High score</string>
    <string name="game_over_small">Game Over</string>
</resources>